# quarrel

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  makefile  quarrel
lib/: color.h  engine.h  entity.h  event.h  eventhandler.h  graphics.h  helpers.h  image.h  imageio.h  input.h  log.h  screen.h  window.h  xdisplayhandler.h  xeventhandler.h  xgraphics.h  xwindow.h
src/: color.cpp  engine.cpp  entity.cpp  event.cpp  image.cpp  imageio.cpp  input.cpp  log.cpp  screen.cpp  testbed.cpp  window.cpp  xdisplayhandler.cpp  xeventhandler.cpp  xgraphics.cpp  xwindow.cpp
